# market-sim

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md
include/: Algorithm.hpp  AlpacaFeed.hpp  Logger.hpp  OrderBook.hpp  PriceEngine.hpp  PriceQueue.hpp  SMAAlgorithm.hpp  Trader.hpp  configLoader.hpp
json/: strategy_config.json
src/: Algorithm.cpp  AlpacaFeed.cpp  Logger.cpp  OrderBook.cpp  PriceEngine.cpp  PriceQueue.cpp  SMAAlgorithm.cpp  Trader.cpp  main.cpp
tests/: test_orderbook.cpp
